{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 105,
  "lineage": "b65e1fca-6127-bcfb-690f-fb8baf57f5a8",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "backend_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/784262c0-253b-469e-96a9-def4349c9c23/resourceGroups/webapp-resource-group/providers/Microsoft.Network/networkInterfaces/backend-nic",
            "internal_domain_name_suffix": "umqe21qa5ote5hxkinq1xslu4g.xx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "backend-ip-config",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/784262c0-253b-469e-96a9-def4349c9c23/resourceGroups/webapp-resource-group/providers/Microsoft.Network/virtualNetworks/webapp-vnet/subnets/backend-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westus2",
            "mac_address": "00-22-48-77-60-22",
            "name": "backend-nic",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "webapp-resource-group",
            "virtual_machine_id": "/subscriptions/784262c0-253b-469e-96a9-def4349c9c23/resourceGroups/webapp-resource-group/providers/Microsoft.Compute/virtualMachines/backend-vm"
          },
          "dependencies": [
            "azurerm_resource_group.webapp_rg",
            "azurerm_subnet.backend_subnet",
            "azurerm_virtual_network.webapp_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "frontend_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/784262c0-253b-469e-96a9-def4349c9c23/resourceGroups/webapp-resource-group/providers/Microsoft.Network/networkInterfaces/frontend-nic",
            "internal_domain_name_suffix": "umqe21qa5ote5hxkinq1xslu4g.xx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "frontend-ip-config",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/784262c0-253b-469e-96a9-def4349c9c23/resourceGroups/webapp-resource-group/providers/Microsoft.Network/publicIPAddresses/frontend-public-ip",
                "subnet_id": "/subscriptions/784262c0-253b-469e-96a9-def4349c9c23/resourceGroups/webapp-resource-group/providers/Microsoft.Network/virtualNetworks/webapp-vnet/subnets/frontend-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westus2",
            "mac_address": "00-22-48-7E-9A-5C",
            "name": "frontend-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "webapp-resource-group",
            "virtual_machine_id": "/subscriptions/784262c0-253b-469e-96a9-def4349c9c23/resourceGroups/webapp-resource-group/providers/Microsoft.Compute/virtualMachines/frontend-vm"
          },
          "dependencies": [
            "azurerm_public_ip.frontend_public_ip",
            "azurerm_resource_group.webapp_rg",
            "azurerm_subnet.frontend_subnet",
            "azurerm_virtual_network.webapp_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "backend_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/784262c0-253b-469e-96a9-def4349c9c23/resourceGroups/webapp-resource-group/providers/Microsoft.Network/networkSecurityGroups/backend-nsg",
            "location": "westus2",
            "name": "backend-nsg",
            "resource_group_name": "webapp-resource-group",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-internal",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.webapp_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "frontend_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/784262c0-253b-469e-96a9-def4349c9c23/resourceGroups/webapp-resource-group/providers/Microsoft.Network/networkSecurityGroups/frontend-nsg",
            "location": "westus2",
            "name": "frontend-nsg",
            "resource_group_name": "webapp-resource-group",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-https",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-http",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.webapp_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "frontend_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/784262c0-253b-469e-96a9-def4349c9c23/resourceGroups/webapp-resource-group/providers/Microsoft.Network/publicIPAddresses/frontend-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "51.143.7.190",
            "ip_version": "IPv4",
            "location": "westus2",
            "name": "frontend-public-ip",
            "resource_group_name": "webapp-resource-group",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.webapp_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "backend_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/784262c0-253b-469e-96a9-def4349c9c23/resourceGroups/webapp-resource-group/providers/Microsoft.Network/virtualNetworks/webapp-vnet/subnets/backend-subnet",
            "name": "backend-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "webapp-resource-group",
            "virtual_network_name": "webapp-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.webapp_rg",
            "azurerm_virtual_network.webapp_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "frontend_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/784262c0-253b-469e-96a9-def4349c9c23/resourceGroups/webapp-resource-group/providers/Microsoft.Network/virtualNetworks/webapp-vnet/subnets/frontend-subnet",
            "name": "frontend-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "webapp-resource-group",
            "virtual_network_name": "webapp-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.webapp_rg",
            "azurerm_virtual_network.webapp_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "webapp_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "6e4e20a3-fb00-4fa6-9eea-4361bbc974f6",
            "id": "/subscriptions/784262c0-253b-469e-96a9-def4349c9c23/resourceGroups/webapp-resource-group/providers/Microsoft.Network/virtualNetworks/webapp-vnet",
            "location": "westus2",
            "name": "webapp-vnet",
            "resource_group_name": "webapp-resource-group",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/784262c0-253b-469e-96a9-def4349c9c23/resourceGroups/webapp-resource-group/providers/Microsoft.Network/virtualNetworks/webapp-vnet/subnets/frontend-subnet",
                "name": "frontend-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              },
              {
                "address_prefixes": [
                  "10.0.2.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/784262c0-253b-469e-96a9-def4349c9c23/resourceGroups/webapp-resource-group/providers/Microsoft.Network/virtualNetworks/webapp-vnet/subnets/backend-subnet",
                "name": "backend-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.webapp_rg"
          ]
        }
      ]
    }
  ]
}